Closed Bug 1266064 Opened 9 years ago Closed 9 years ago

Workaround loadInfo/loadContext mismatches

Categories

(Firefox OS Graveyard :: Runtime, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

Details

Attachments

(2 files)

Several of them are breaking use of debug build. I have a local patch removing those assertions and everything seems to be good without. There is a bug, but it is affecting much more than just us. In the meantime instead of blocking everyone I suggest we land a hacky disabling of those assertions and keep working with people that are tracking down the real bug.
Blocks: 1266067
MozReview-Commit-ID: DXkSuLEYlDh
Attachment #8743261 - Flags: review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Alexandre, have you consulted Ben Kelly, or Jonas Sicking about disabling those assertions? Those are the people who added/reviewed them. I don't see them CC'ed in the bug and also none of them has reviewed the changes within those bug. Please make sure they are fine with it!
Flags: needinfo?(lissyx+mozillians)
(In reply to Christoph Kerschbaumer [:ckerschb] from comment #4) > Alexandre, have you consulted Ben Kelly, or Jonas Sicking about disabling > those assertions? Those are the people who added/reviewed them. I don't see > them CC'ed in the bug and also none of them has reviewed the changes within > those bug. Please make sure they are fine with it! I share your concern, but this is only landed on pine to unblock other work. I am continuing to investigate this issue and filed bug 1266067 to revert those changes. So far, those disabled asserts are enough to allow us to work both on mulet and on device with debug builds :)
Flags: needinfo?(lissyx+mozillians)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: