Bug 1266064 - Hacks to avoid MOZ_ASSERT() on loadInfo/loadContext r=me

MozReview-Commit-ID: DXkSuLEYlDh