netwerk/protocol/http/nsHttpChannel.cpp
@@ -5109,7 +5109,8 @@ nsHttpChannel::AsyncOpen(nsIStreamListener *listener, nsISupports *context)
 
     LOG(("nsHttpChannel::AsyncOpen [this=%p]\n", this));
 
-    NS_CompareLoadInfoAndLoadContext(this);
+    // FIXME: re-enable that assertion
+    // NS_CompareLoadInfoAndLoadContext(this);
 
     NS_ENSURE_ARG_POINTER(listener);
     NS_ENSURE_TRUE(!mIsPending, NS_ERROR_IN_PROGRESS);
